--- a/assets/test_chambers/test_chamber_00/test_chamber_00.yaml
+++ b/assets/test_chambers/test_chamber_00/test_chamber_00.yaml
@@ -2,6 +2,8 @@ operators:
   []
 cutscenes:
   INTRO_CUTSCENE:
+    - set_signal entry
+    - set_signal exit
     - q_sound SOUNDS_05_PART1_ENTRY_1 CH_GLADOS SUBTITLE_05_PART1_ENTRY_1
     - q_sound SOUNDS_05_PART1_ENTRY_2 CH_GLADOS SUBTITLE_05_PART1_ENTRY_2
     - wait_for_signal success
