--- a/assets/materials/static.skm.yaml
+++ b/assets/materials/static.skm.yaml
@@ -1275,3 +1275,21 @@ materials:
       g: 100
       b: 200
       a: 128
+
+  laser_beam:
+    gDPSetTile:
+      filename: ./effects/laser_beam.png
+      fmt: G_IM_FMT_RGBA
+      siz: G_IM_SIZ_32b
+      s:
+        mirror: true
+      t:
+        mirror: true
+
+    gDPSetRenderMode: G_RM_ZB_XLU_SURF
+
+    gDPSetCombineMode:
+      color: ["0", "0", "0", "TEXEL0"]
+      alpha: ["0", "0", "0", "TEXEL0"]
+    gSPGeometryMode:
+      clear: [G_CULL_BACK, G_CULL_FRONT] 
